--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,4 +1,4 @@
-.homePage {
+.home {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,7 +15,7 @@
   flex-direction: column;
   gap: 24px;
 }
-@media screen and (min-widrh: 768px) {
+@media screen and (min-width: 768px) {
   .home {
     margin: 0 32px;
     border-top-left-radius: 60px;
@@ -41,11 +41,11 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 1.28;
-  letter-spacing: -o.02em;
+  letter-spacing: -0.02em;
 }
-@media screen and(min-width:768px) {
+@media screen and (min-width: 768px) {
   .title {
-    font-style: 80px;
+    font-size: 80px;
   }
   .description {
     font-size: 18px;
@@ -55,7 +55,7 @@
     width: 255px;
   }
 }
-@media screen and(min-width:1280px) {
+@media screen and (min-width: 1280px) {
   .title {
     font-size: 90px;
     width: 760px;
@@ -71,7 +71,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-image: url();
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -79,4 +78,43 @@
   height: 402px;
   flex-shrink: 0;
   border-radius: 30px;
+}
+@media screen and (max-width: 374px) {
+  .photo {
+    width: 280px;
+  }
+}
+@media screen and (min-width: 320px) {
+  .photo {
+    background-image: url('../../assets/imgs/mobile/home-mob@1x.jpg');
+  }
+}
+@media screen and (min-width: 320px) and (min-resolution: 192dpi) {
+  .photo {
+    background-image: url('../../assets/imgs/mobile/home-mob@2x.jpg');
+  }
+}
+@media screen and (min-width: 768px) {
+  .photo {
+    background-image: url('../../assets/imgs/tablet/home-tablet@1x.jpg');
+    width: 704px;
+    height: 496px;
+  }
+}
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .photo {
+    background-image: url('../../assets/imgs/tablet/home-tablet@2x.jpg');
+  }
+}
+@media screen and (min-width: 1280px) {
+  .photo {
+    background-image: url('../../assets/imgs/desktop/home-desk@1x.jpg');
+    width: 1216px;
+    height: 384px;
+  }
+}
+@media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
+  .photo {
+    background-image: url('../../assets/imgs/desktop/home-desk@2x.jpg');
+  }
 }
