--- a/src/components/ContainerImage/ContainerImage.module.css
+++ b/src/components/ContainerImage/ContainerImage.module.css
@@ -5,6 +5,22 @@
   background-color: var(--main-color);
   border-radius: 30px;
   width: 100%;
+  background-image: url('../../assets/imgs/mobile/rectangle-mob@1x.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media (min-width: 768px) {
+  .petContainer {
+    background-image: url('../../assets/imgs/tablet/rectangle-tablet@1x.png');
+  }
+}
+
+@media (min-width: 1280px) {
+  .petContainer {
+    background-image: url('../../assets/imgs/desktop/rectangle-desk@1x.png');
+  }
 }
 
 @media screen and (min-width: 768px) {
