--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   --input-default: rgba(38, 38, 38, 0.15);
   --male-color: #54adff;
   --text-color: rgba(255, 255, 255, 1);
+  --border-color: rgb(255, 255, 255, 0.15);
+  --light-border-color: rgb(255, 255, 255, 0.4);
   --male-hover: rgba(84, 173, 255, 0.1);
   --both-color: rgba(246, 184, 61, 1);
   --both-hover-icon: rgba(255, 244, 223, 1);
