--- a/src/components/ContainerImage/ContainerImage.module.css
+++ b/src/components/ContainerImage/ContainerImage.module.css
@@ -5,6 +5,7 @@
   background-color: var(--main-color);
   border-radius: 30px;
   width: 100%;
+
   background-image: url('../../assets/imgs/mobile/rectangle-mob@1x.png');
   background-repeat: no-repeat;
   background-position: center;
@@ -13,12 +14,18 @@
 
 @media (min-width: 768px) {
   .petContainer {
+    border-radius: 60px;
+
+    width: 704px;
+    height: 302px;
     background-image: url('../../assets/imgs/tablet/rectangle-tablet@1x.png');
   }
 }
 
 @media (min-width: 1280px) {
   .petContainer {
+    width: 592px;
+    height: 654px;
     background-image: url('../../assets/imgs/desktop/rectangle-desk@1x.png');
   }
 }
@@ -30,18 +37,24 @@
 }
 
 .petImage {
-  margin-right: 15px;
+  width: 335px;
+  height: 280px;
+  /* margin-right: 15px; */
 }
 
 @media screen and (min-width: 768px) {
   .petImage {
-    margin-right: 20px;
+    width: 364px;
+    height: 302px;
+    /* margin-right: 20px; */
   }
 }
 
 @media screen and (min-width: 1280px) {
   .petImage {
-    margin-left: 50px;
+    width: 512px;
+    height: 660px;
+    /* margin-left: 50px; */
     /* flex-shrink: 1; */
   }
 }
