--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,4 +1,4 @@
-.layoutContainer {
+/* .layoutContainer {
   max-width: 375px;
   margin: 0 auto;
   padding: 0 16px;
@@ -16,4 +16,4 @@
     padding: 0 64px;
     width: 1440px;
   }
-}
+} */
