--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -2,18 +2,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  gap: 10px;
+  padding: 6px 0 20px;
+  /* padding: 20px ;
+  gap: 10px; */
 }
 @media screen and (min-width: 768px) {
   .pageLogin {
-    padding: 32px;
-    gap: 16px;
+    padding: 0 0 32px;
+    /* padding: 32px;
+    gap: 16px; */
   }
 }
 @media screen and (min-width: 1280px) {
   .pageLogin {
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeate(2, 1fr);
+    /* flex-direction: row; */
     gap: 32px;
   }
 }
@@ -22,7 +26,7 @@
   flex-direction: column;
   width: 100%;
 
-  border-color: var(--white-color);
+  background-color: var(--text-color);
   border-radius: 30px;
   padding: 27px 20px;
 }
