--- a/src/components/ContainerImage/ContainerImage.module.css
+++ b/src/components/ContainerImage/ContainerImage.module.css
@@ -5,18 +5,18 @@
   background-color: var(--main-color);
   border-radius: 30px;
   width: 100%;
-
   background-image: url('../../assets/imgs/mobile/rectangle-mob@1x.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 @media (min-width: 768px) {
   .petContainer {
     border-radius: 60px;
 
-    width: 704px;
+    /* width: 704px; */
     height: 302px;
     background-image: url('../../assets/imgs/tablet/rectangle-tablet@1x.png');
   }
