--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -2,30 +2,43 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6px 0 20px;
-  /* padding: 20px ;
-  gap: 10px; */
+  padding: 20px;
+  gap: 10px;
 }
 @media screen and (min-width: 768px) {
   .pageLogin {
-    padding: 0 0 32px;
-    /* padding: 32px;
-    gap: 16px; */
+    padding: 32px;
+    gap: 16px;
   }
 }
 @media screen and (min-width: 1280px) {
   .pageLogin {
-    display: grid;
-    grid-template-columns: repeate(2, 1fr);
-    /* flex-direction: row; */
+    flex-direction: row;
     gap: 32px;
   }
 }
+
+/* .pageLogin {
+  display: grid;
+  min-width: 285px;
+  grid-template-columns: 1fr;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .pageLogin {
+    grid-template-columns: 1r 1fr;
+    grid-template-rows: auto auto;
+    column-gap: 12px;
+    padding: 0px 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+} */
 .container {
   display: flex;
   flex-direction: column;
   width: 100%;
-
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   background-color: var(--text-color);
   border-radius: 30px;
   padding: 27px 20px;
@@ -39,6 +52,7 @@
 @media screen and (min-width: 1280px) {
   .container {
     padding: 82px 84px;
+    /* padding: 167px 84px; */
   }
 }
 .titleContainer {
@@ -53,38 +67,14 @@
     margin-bottom: 32px;
   }
 }
+
 .description {
   font-size: 14px;
   font-weight: 500;
+  margin-top: 10px;
 }
 @media screen and (min-width: 768px) {
   .description {
     gap: 18px;
   }
-}
-.footerDescription,
-.footerDescription a {
-  display: flex;
-  align-self: center;
-  font-size: 12px;
-  font-weight: 500;
-}
-.footerDescription {
-  margin-bottom: 12px;
-  color: var(--input-default);
-}
-@media screen and (min-width: 768px) {
-  .footerDescription,
-  .footerDescription a {
-    font-size: 14px;
-  }
-  .footerDescription {
-    margin-top: 16px;
-  }
-}
-.footerDescription a {
-  color: var(--main-color);
-}
-.footerDescription a:hover {
-  text-decoration: underline;
 }
