--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   background-color: var(--text-color);
   border-radius: 30px;
   padding: 27px 20px;
@@ -57,30 +57,4 @@
   .description {
     gap: 18px;
   }
-}
-.footerDescription,
-.footerDescription a {
-  display: flex;
-  align-self: center;
-  font-size: 12px;
-  font-weight: 500;
-}
-.footerDescription {
-  margin-bottom: 12px;
-  color: var(--input-default);
-}
-@media screen and (min-width: 768px) {
-  .footerDescription,
-  .footerDescription a {
-    font-size: 14px;
-  }
-  .footerDescription {
-    margin-top: 16px;
-  }
-}
-.footerDescription a {
-  color: var(--main-color);
-}
-.footerDescription a:hover {
-  text-decoration: underline;
 }
