--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -107,7 +107,7 @@ input.invalid {
     right: 52px;
   }
 }
-.button {
+.loginBtn {
   margin-top: 14px;
   padding: 12px;
   background-color: var(--main-color);
@@ -122,13 +122,13 @@ input.invalid {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 @media screen and (min-width: 768px) {
-  .button {
+  .loginBtn {
     font-size: 16px;
     padding: 16px;
     font-size: 16px;
   }
 }
-button:hover {
+.loginBtn:hover {
   background-color: var(--dark-hover);
 }
 .footerDescription,
