--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -4,10 +4,7 @@
   align-items: center;
   margin: 60px 0 0;
 }
-/* .flipWrapper {
-  display: flex;
-  gap: 6px;
-} */
+
 .flipWrapper {
   display: flex;
   justify-content: space-between;
@@ -43,6 +40,7 @@
   background: none;
   font-size: 14px;
   font-weight: 700;
+  cursor: pointer;
   transition: background-color 0.3s ease;
   color: var(--black-color);
 }
