--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -6,17 +6,23 @@
   justify-content: center;
   border-radius: 30px;
   min-width: 335px;
+  max-height: 712px;
+  height: auto;
+
   margin: 0 20px 20px;
 }
 @media screen and (min-width: 768px) {
   .container {
     border-radius: 60px;
-    min-width: 704px;
+    min-width: auto;
+    max-height: 878px;
     margin: 0 32px 32px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
+    height: auto;
+    max-height: 654px;
     min-width: 1216px;
   }
 }
