--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,28 +1,57 @@
+/* added wrapper */
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  gap: 10px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+  padding: 0 0px 30px 32px;
+}
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    padding: 0 0px 30px 32px;
+  }
+}
 .home {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-width: 335px;
+  height: 390px;
   margin: 0 20px;
   color: var(--white-color);
   padding: 60px 20px 50px;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   background-color: var(--main-color);
 }
 .content {
+  /* width: 1216px;
+  height: 336px; */
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 @media screen and (min-width: 768px) {
   .home {
-    margin: 0 32px;
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
+    /* margin: 0 32px; */
+    margin: 0 32px 0px 0px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
   }
   .content {
     gap: 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .home {
+    max-width: 1216px;
+    height: 384px;
   }
 }
 .title {
@@ -30,18 +59,18 @@
   font-size: 50px;
   font-weight: 700;
   line-height: 0.96;
-  letter-spacing: -0.3em;
+  /* letter-spacing: -0.3em; */
 }
 
 .title .light {
-  color: var(--text-color);
+  color: rgba(255, 255, 255, 0.4);
 }
 .description {
   color: var(--white-color);
   font-size: 14px;
   font-weight: 500;
   line-height: 1.28;
-  letter-spacing: -0.02em;
+  /* letter-spacing: -0.02em; */
 }
 @media screen and (min-width: 768px) {
   .title {
@@ -66,9 +95,11 @@
     gap: 73px;
   }
 }
+
 .photo {
   margin: 0 20px 10px;
   display: flex;
+  min-width: 280px;
   justify-content: center;
   align-items: center;
   background-size: cover;
@@ -76,14 +107,10 @@
   background-repeat: no-repeat;
   width: 335px;
   height: 402px;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   border-radius: 30px;
 }
-@media screen and (max-width: 374px) {
-  .photo {
-    width: 280px;
-  }
-}
+
 @media screen and (min-width: 320px) {
   .photo {
     background-image: url('../../assets/imgs/mobile/home-mob@1x.jpg');
@@ -97,6 +124,7 @@
 @media screen and (min-width: 768px) {
   .photo {
     background-image: url('../../assets/imgs/tablet/home-tablet@1x.jpg');
+    border-radius: 60px;
     width: 704px;
     height: 496px;
   }
