--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -2,18 +2,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 335px;
+  margin: 0 auto;
   padding: 20px;
   gap: 10px;
 }
 @media screen and (min-width: 768px) {
   .pageLogin {
+    max-width: 704px;
     padding: 32px;
     gap: 16px;
   }
 }
 @media screen and (min-width: 1280px) {
   .pageLogin {
+    max-width: 1216px;
     flex-direction: row;
+
     gap: 32px;
   }
 }
@@ -26,16 +31,17 @@
 }
 @media (min-width: 768px) {
   .pageLogin {
-    grid-template-columns: 1r 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
     column-gap: 12px;
     padding: 0px 20px;
-    max-width: 1400px;
+    max-width: 1216px;
     margin: 0 auto;
   }
 } */
 .container {
   display: flex;
+  /* position: relative; */
   flex-direction: column;
   width: 100%;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -45,14 +51,17 @@
 }
 @media screen and (min-width: 768px) {
   .container {
+    max-width: 704px;
+    height: 560px;
     border-radius: 60px;
     padding: 30px 140px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
+    max-width: 592px;
+    height: 654px;
     padding: 82px 84px;
-    /* padding: 167px 84px; */
   }
 }
 .titleContainer {
