--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,4 +1,4 @@
-.authNav {
+/* .authNav {
   display: none;
 }
 @media screen and (min-width: 768px) {
@@ -45,8 +45,8 @@
 .registerButton:hover,
 .registerButton:focus {
   background-color: var(--hover-light);
-}
-
+} */
+/* _______________________________________ */
 /* .authNav {
   display: flex;
   gap: 10px;
@@ -89,3 +89,53 @@
     padding: 12px 24px;
   }
 } */
+.authNav {
+  display: none; /* Приховано за замовчуванням */
+}
+
+@media screen and (min-width: 768px) {
+  .authNav {
+    display: flex; /* Відображаємо кнопки для ширини 768px і більше */
+    flex-direction: row;
+    gap: 10px;
+  }
+}
+
+.loginButton,
+.registerButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  padding: 15px 20px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  width: 100%;
+  border: none;
+  transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+/* Стилі для кнопки логіну */
+.loginButton {
+  background-color: var(--main-color);
+  color: var(--white-color);
+  border: 1px solid var(--light-border-color);
+}
+
+.loginButton:hover,
+.loginButton:focus {
+  background-color: var(--dark-hover);
+  color: var(--white-color);
+}
+
+/* Стилі для кнопки реєстрації */
+.registerButton {
+  background-color: var(--main-light);
+  color: var(--main-color);
+}
+
+.registerButton:hover,
+.registerButton:focus {
+  background-color: var(--hover-light);
+}
