--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -50,10 +50,10 @@
 
 .homeHeader {
   background-color: var(--main-color);
-  /* padding: 18px 20px 0; */
+  padding: 18px 20px 0;
   min-width: 335px;
-  margin: 0 auto;
-  margin-top: 20px;
+
+  margin: 10px 20px 0 20px;
   /* margin: 10px 20px 0; */
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -61,10 +61,10 @@
 
 @media screen and (min-width: 768px) {
   .homeHeader {
-    padding: 24px 32px 0;
-    margin: 0 auto;
+    /* padding: 24px 32px 0; */
+    /* margin: 0 auto; */
     /* max-width: 704px; */
-    /* margin: 16px 32px 0; */
+    margin: 10px 32px 0 32px;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
   }
