--- a/src/components/LogoChange/LogoChange.module.css
+++ b/src/components/LogoChange/LogoChange.module.css
@@ -14,7 +14,7 @@
   font-weight: 800;
   font-size: 28px;
   line-height: 1;
-
+  margin-left: 42px;
   color: var(--white-color);
   background-color: transparent;
 }
