creared notice filter

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --white-color: #ffffff;
   --black-color: #262626;
   --female-color: #f43f5e;
+  --background-color: #fff4df;
   --female-hover: rgba(244, 63, 94, 0.1);
   --input-default: rgba(38, 38, 38, 0.15);
   --male-color: #54adff;
