--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -1,6 +1,6 @@
 .filters {
   border-radius: 30px;
-  background-color: var(--background-color);
+  background-color: #fff4df;
   padding: 20px;
   margin-top: 40px;
   display: flex;
@@ -19,19 +19,62 @@
   }
 }
 
-.row {
-  display: grid;
-  row-gap: 12px;
-  column-gap: 8px;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+@media screen and (min-width: 300px) {
+  .row {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 12px;
+    column-gap: 8px;
+  }
+  .first {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+  }
+  .second {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+  }
+  .third {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+  }
+  .fourth {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+  }
+  .fifth {
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+  }
 }
 
 @media screen and (min-width: 580px) {
   .row {
+    display: grid;
+    gap: 16px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 16px;
+  }
+  .first {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  .second {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  .third {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+  }
+  .fourth {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  .fifth {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 }
 
@@ -40,36 +83,26 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(1, 1fr);
   }
-}
-
-.row > div {
-  grid-row: auto;
-  grid-column: auto;
-}
-
-.row .first {
-  grid-row: 1 / 2;
-  grid-column: 1 / 3;
-}
-
-.row .second {
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-}
-
-.row .third {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-.row .fourth {
-  grid-row: 3 / 4;
-  grid-column: 1 / 3;
-}
-
-.row .fifth {
-  grid-row: 4 / 5;
-  grid-column: 1 / 3;
+  .first {
+    grid-column: 1 / 2;
+    grid-row: 1 / 1;
+  }
+  .second {
+    grid-column: 2 / 3;
+    grid-row: 1 / 1;
+  }
+  .third {
+    grid-column: 3 / 4;
+    grid-row: 1 / 1;
+  }
+  .fourth {
+    grid-column: 4 / 5;
+    grid-row: 1 / 1;
+  }
+  .fifth {
+    grid-column: 5 / 6;
+    grid-row: 1 / 1;
+  }
 }
 
 .hr {
@@ -77,7 +110,7 @@
   width: 100%;
   background: none;
   border: none;
-  border-top: 1px solid var(--input-default);
+  border-top: 1px solid rgba(38, 38, 38, 0.1);
   margin: 20px 0;
 }
 
@@ -88,10 +121,10 @@
 }
 
 .sorting label {
-  background-color: var(--white-color);
+  background-color: #ffffff;
   padding: 12px;
   border-radius: 30px;
-  font-size: 16px;
+  font-size: 14px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -102,8 +135,11 @@
 }
 
 .sorting input[type='checkbox']:checked + label {
-  background-color: var(--main-color);
-  color: var(--white-color);
+  background-color: #f6b83d;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .resetButton {
@@ -113,12 +149,13 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  background-color: var(--main-color);
+  background-color: #f6b83d;
   max-width: 180px;
   font-size: 14px;
 }
 
 @media screen and (min-width: 768px) {
+  .select,
   .sorting label,
   .resetButton {
     font-size: 16px;
