--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -2,19 +2,23 @@
   display: flex;
   flex-direction: column;
 }
+
 .photoNews {
   border-radius: 15px;
   width: 100%;
   height: 190px;
   object-fit: cover;
   margin-bottom: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 }
+
 @media screen and (min-width: 768px) {
   .photoNews {
     height: 226px;
     margin-bottom: 28px;
   }
 }
+
 .title {
   font-size: 20px;
   font-weight: 700;
