--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -1,12 +1,18 @@
 .filters {
   border-radius: 30px;
-  background-color: #fff4df;
+  background-color: var(--main-light);
   padding: 20px;
   margin-top: 40px;
+  font-size: 12px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
-
+@media screen and (max-width: 375px) {
+  .filters {
+    padding: 20px;
+  }
+}
 @media screen and (min-width: 768px) {
   .filters {
     padding: 40px 32px;
@@ -18,93 +24,6 @@
     padding: 40px;
   }
 }
-
-@media screen and (min-width: 300px) {
-  .row {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 12px;
-    column-gap: 8px;
-  }
-  .first {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-  }
-  .second {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-  }
-  .third {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-  }
-  .fourth {
-    grid-row: 3 / 4;
-    grid-column: 1 / 3;
-  }
-  .fifth {
-    grid-row: 4 / 5;
-    grid-column: 1 / 3;
-  }
-}
-
-@media screen and (min-width: 580px) {
-  .row {
-    display: grid;
-    gap: 16px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-  }
-  .first {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-  .second {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-  .third {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-  }
-  .fourth {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  .fifth {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .row {
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-  }
-  .first {
-    grid-column: 1 / 2;
-    grid-row: 1 / 1;
-  }
-  .second {
-    grid-column: 2 / 3;
-    grid-row: 1 / 1;
-  }
-  .third {
-    grid-column: 3 / 4;
-    grid-row: 1 / 1;
-  }
-  .fourth {
-    grid-column: 4 / 5;
-    grid-row: 1 / 1;
-  }
-  .fifth {
-    grid-column: 5 / 6;
-    grid-row: 1 / 1;
-  }
-}
-
 .hr {
   display: flex;
   width: 100%;
@@ -121,7 +40,7 @@
 }
 
 .sorting label {
-  background-color: #ffffff;
+  background-color: var(--white-color);
   padding: 12px;
   border-radius: 30px;
   font-size: 14px;
@@ -135,8 +54,8 @@
 }
 
 .sorting input[type='checkbox']:checked + label {
-  background-color: #f6b83d;
-  color: #fff;
+  background-color: var(--main-color);
+  color: var(--white-color);
   display: flex;
   align-items: center;
   gap: 8px;
@@ -144,20 +63,64 @@
 
 .resetButton {
   display: flex;
-  padding: 12px;
+  padding: 12px 50px;
   border-radius: 30px;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  background-color: #f6b83d;
+  background-color: var(--main-color);
   max-width: 180px;
   font-size: 14px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+/* _____________________ */
+.row {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
+  padding: 10px;
+  margin-top: 40px;
+}
+@media screen and (max-width: 375px) {
+  .row {
+    gap: 25px;
+    padding: 20px;
+  }
 }
 
-@media screen and (min-width: 768px) {
-  .select,
-  .sorting label,
-  .resetButton {
-    font-size: 16px;
+.first {
+  grid-column: 1 / 3;
+}
+
+.second,
+.third,
+.fourth,
+.fifth {
+  grid-column: span 1;
+}
+
+.select {
+  max-width: 200px;
+  width: 100%;
+}
+
+.input {
+  flex-grow: 1;
+  min-width: 0;
+}
+@media screen and (max-width: 768px) {
+  .row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .first {
+    grid-column: 1 / 3;
+  }
+
+  .second,
+  .third,
+  .fourth,
+  .fifth {
+    grid-column: span 1;
   }
 }
