--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -5,6 +5,7 @@
   padding: 20px;
   border-radius: 16px;
   background-color: var(--white-color);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
