--- a/src/components/SearchField/SearchField.module.css
+++ b/src/components/SearchField/SearchField.module.css
@@ -1,4 +1,4 @@
-.search {
+/* .search {
   display: flex;
   align-items: center;
   border-radius: 30px;
@@ -67,15 +67,7 @@
     font-size: 16px;
   }
 }
-/* .clearButton,
-.searchButton {
-  width: 24px;
-  height: 24px;
-  padding: 0;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-} */
+
 
 .iconsContainer {
   display: flex;
@@ -86,4 +78,74 @@
   .iconsContainer {
     gap: 4px;
   }
+} */
+.search {
+  display: flex;
+  align-items: center;
+  border-radius: 30px;
+  border: 1px solid var(--input-default);
+  background-color: var(--white-color);
+  width: 100%;
+  padding: 12px;
+}
+
+.search:focus,
+.search:hover {
+  border: 1px solid var(--dark-hover);
+}
+
+@media screen and (min-width: 768px) {
+  .search {
+    width: 300px; /* Додано px для коректного відображення */
+    padding: 14px;
+  }
+}
+
+.searchContainer {
+  display: flex;
+  align-items: center;
+}
+
+.input {
+  flex: 1; /* Забезпечує, що поле вводу займає весь доступний простір */
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 0;
+  margin-right: 10px; /* Відступ між полем вводу та іконками */
+}
+
+.input::placeholder {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--input-default);
+}
+
+@media screen and (min-width: 768px) {
+  .input::placeholder {
+    font-size: 16px;
+  }
+}
+
+.iconsContainer {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* Відстань між іконками */
+}
+
+.searchIcon,
+.clearButton img {
+  width: 18px; /* Фіксована ширина для іконок */
+  height: 18px; /* Фіксована висота для іконок */
+  flex-shrink: 0; /* Забороняє стиснення іконок */
+}
+
+.clearButton {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
