--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -13,9 +13,16 @@
     padding: 0 64px;
   }
 }
-.noFound {
-  margin-top: 20px;
+.noResults {
+  color: var(--red-color);
+  font-size: 26px;
+  margin-top: 50px;
   text-align: center;
+}
+.noFound.error {
+  color: var(--red-color);
+  margin-top: 50px;
+  font-size: 26px;
 }
 @media screen and (min-width: 768px) {
   .searchWrapper {
