--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,81 +1,54 @@
-/* .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 28px 20px 20px;
-}
-@media screen and (min-wdth: 768px) {
-  .header {
-    padding: 32px;
-  }
-}
-@media screen and (min-wdth: 1280px) {
-  .header {
-    padding: 32px 64px;
-  }
-}
-.homeHeader {
-  background-color: var(--main-color);
-  padding: 18px 20px 0;
-  margin: 10px 20px 0;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-}
-@media screen and (min-wdth: 768px) {
-  .homeHeader {
-    padding: 24px 32px 0;
-    margin: 16px 32px 0;
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
-  }
-} */
 .wrapperHome {
   background-color: aqua;
-  margin: 16px 20px 0px 20px;
+  min-width: 280px;
+  padding: 10px 20px 0px 20px;
+  margin: 0 20px 0 52px;
 }
+@media screen and (min-width: 768px) {
+  .wrapperHome {
+    margin: 20px 32px 0px 64px;
+    padding: 0px 20px 0px 20px;
+    min-width: 768px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .wrapperHome {
+    margin: 20px 0px 0px 64px;
+    padding: 0px 20px 0px 20px;
+    min-width: 1280px;
+  }
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 28px 20px 20px;
+  width: 100%;
+}
+
+.homeHeader {
+  background-color: var(--main-color);
+
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .header {
     padding: 32px;
   }
-}
-
-@media screen and (min-width: 1280px) {
-  .header {
-    padding: 32px 64px;
-  }
-}
-
-.homeHeader {
-  background-color: var(--main-color);
-  padding: 18px 20px 0;
-  min-width: 335px;
-
-  margin: 10px 20px 0 20px;
-  /* margin: 10px 20px 0; */
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-}
-
-@media screen and (min-width: 768px) {
   .homeHeader {
-    /* padding: 24px 32px 0; */
-    /* margin: 0 auto; */
-    /* max-width: 704px; */
-    margin: 10px 32px 0 32px;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
   }
 }
+
 @media screen and (min-width: 1280px) {
   .header {
-    max-width: 1216px;
     padding: 32px 64px;
+  }
+  .homeHeader {
+    max-width: 1216px;
   }
 }
