corected styles: login, register ,notfound pages

--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -90,12 +90,12 @@
   }
 } */
 .authNav {
-  display: none; /* Приховано за замовчуванням */
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
   .authNav {
-    display: flex; /* Відображаємо кнопки для ширини 768px і більше */
+    display: flex;
     flex-direction: row;
     gap: 10px;
   }
@@ -116,7 +116,6 @@
   transition: color 0.3s ease, background-color 0.3s ease;
 }
 
-/* Стилі для кнопки логіну */
 .loginButton {
   background-color: var(--main-color);
   color: var(--white-color);
@@ -129,9 +128,8 @@
   color: var(--white-color);
 }
 
-/* Стилі для кнопки реєстрації */
 .registerButton {
-  background-color: var(--main-light);
+  background-color: var(--hover-light);
   color: var(--main-color);
 }
 
