--- a/src/components/LogoChange/LogoChange.module.css
+++ b/src/components/LogoChange/LogoChange.module.css
@@ -23,10 +23,15 @@
   font-weight: 800;
   font-size: 28px;
   line-height: 1;
-
+  /* margin-left: 20px; */
   color: var(--black-color);
   background-color: transparent;
 }
+/* @media screen and (min-width: 768px) {
+  .color {
+    margin-left: 32px;
+  }
+} */
 .logo {
   background-color: transparent;
 }
