--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -25,7 +25,7 @@
 
 /* .pageLogin {
   display: grid;
-  min-width: 285px;
+  min-width: 280px;
   grid-template-columns: 1fr;
   align-items: center;
 }
@@ -38,10 +38,9 @@
     max-width: 1216px;
     margin: 0 auto;
   }
-} */
-.container {
+}  */
+.containerLogin {
   display: flex;
-  /* position: relative; */
   flex-direction: column;
   width: 100%;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -50,7 +49,7 @@
   padding: 27px 20px;
 }
 @media screen and (min-width: 768px) {
-  .container {
+  .containerLogin {
     max-width: 704px;
     height: 560px;
     border-radius: 60px;
@@ -58,12 +57,13 @@
   }
 }
 @media screen and (min-width: 1280px) {
-  .container {
+  .containerLogin {
     max-width: 592px;
     height: 654px;
     padding: 82px 84px;
   }
 }
+
 .titleContainer {
   display: flex;
   flex-direction: column;
