--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -15,8 +15,8 @@
   .pageRegister {
     flex-direction: row;
     gap: 32px;
-    max-width: 1280px;
-    margin: 0 auto;
+    width: 1216px;
+    /* margin: 0 auto; */
   }
 }
 
