--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,9 +1,8 @@
 .container {
-  padding: 0px 20px 0px 20px;
   margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .container {
-    padding: 0px 32px 16px 32px;
+    padding-left: 10px;
   }
 }
