--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -2,9 +2,18 @@
   display: flex;
   margin: 0 auto;
   flex-direction: column;
-  padding: 0 0px 20px 32px;
+  padding: 0 0px 10px 0px;
 }
-
+@media screen and (min-width: 768px) {
+  .wrapper {
+    padding: 0 0px 10px 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    padding: 0 32px 10px 32px;
+  }
+}
 .home {
   display: flex;
   flex-direction: column;
@@ -21,8 +30,6 @@
   background-color: var(--main-color);
 }
 .content {
-  /* width: 1216px;
-  height: 336px; */
   display: flex;
   flex-direction: column;
   gap: 24px;
