--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
   --input-default: rgba(38, 38, 38, 0.15);
   --male-color: #54adff;
   --text-color: rgba(255, 255, 255, 1);
-  --border-color: rgb(255, 255, 255, 0.15);
-  --light-border-color: rgb(255, 255, 255, 0.4);
+  --border-color: rgba(195, 186, 186, 0.715);
+  --light-border-color: #b6aeae;
   --male-hover: rgba(84, 173, 255, 0.1);
   --both-color: rgba(246, 184, 61, 1);
   --both-hover-icon: rgba(255, 244, 223, 1);
@@ -28,7 +28,6 @@ body {
   margin: 0;
   padding: 0;
   place-items: center;
-
   color: var(--black-color);
   background-color: var(--background-color);
 }
@@ -40,11 +39,10 @@ h4,
 h5,
 h6,
 p {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
-p:last-child {
-  margin-bottom: 0;
-}
+
 button {
   cursor: pointer;
   border: none;
