--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -119,9 +119,9 @@
 .loginButton {
   background-color: var(--main-color);
   color: var(--white-color);
-  border: 1px solid var(--light-border-color);
+  border: 1px solid #dad4d4;
 }
-
+/*  color for menu mobile */
 .loginButton:hover,
 .loginButton:focus {
   background-color: var(--dark-hover);
