corected style NoticeItem

--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -1,6 +1,6 @@
 .filters {
   border-radius: 30px;
-  background-color: var(--hover-light);
+  background-color: var(--main-light);
   padding: 20px;
   margin-top: 40px;
   font-size: 12px;
