--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -86,13 +86,23 @@
   display: flex;
   align-self: flex-start;
 }
-.price {
+/* .price {
   font-size: 16px;
   font-weight: 700;
   margin-top: auto;
   margin-bottom: 12px;
   display: flex;
   align-items: flex-start;
+} */
+.price {
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: auto;
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4px;
 }
 .actions {
   display: flex;
