--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -48,10 +48,15 @@
     gap: 32px;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1280px) {
+  .content {
+    padding: 12px 64px;
+  }
+}
+@media screen and (max-width: 1280px) {
   .home {
     max-width: 1216px;
-    max-height: 270px;
+    height: 270px;
   }
 }
 .title {
