--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 335px;
+  min-width: 320px;
   margin: 0 auto;
-  padding: 20px;
+  /* padding: 20px; */
   gap: 10px;
 }
 @media screen and (min-width: 768px) {
   .pageLogin {
     max-width: 704px;
-    padding: 32px;
+    /* padding: 32px; */
     gap: 16px;
   }
 }
@@ -19,7 +19,7 @@
     max-width: 1216px;
     flex-direction: row;
 
-    gap: 32px;
+    /* gap: 32px; */
   }
 }
 
